Ensure consistent color in dark mode

--- a/src/nutrition-label.css
+++ b/src/nutrition-label.css
@@ -9,6 +9,7 @@
   width: 350px;
   padding: 0.5rem;
   background: white;
+  color: black !important;
 }
 
 .performance-facts table {
@@ -24,12 +25,14 @@
 
 .performance-facts__header p {
   margin: 0;
+  color: black !important;
 }
 
 .performance-facts__title {
   font-weight: bold;
   font-size: 2rem;
   margin: 0 0 0.25rem 0;
+  color: black !important;
 }
 
 .performance-facts__table {
@@ -48,6 +51,7 @@
   padding: 0.25rem 0;
   border-top: 1px solid black;
   white-space: nowrap;
+  color: black !important;
 }
 
 .performance-facts__table td:last-child {
@@ -84,6 +88,7 @@
 .small-info {
   font-size: 0.7rem;
   margin-bottom: 0rem;
+  color: black !important;
 }
 
 .performance-facts__table--small {
@@ -137,5 +142,5 @@
   font-style: italic;
   margin: 10px 0 0 0;
   text-align: center;
-  color: #666;
+  color: #666 !important;
 }
